Answer SPARQL as the caller, through a forked Ontop VKG
A knowledge-graph front end is the obvious next hop for this stack and the
obvious place for the identity story to collapse: Ontop holds one JDBC
connection pool with one set of credentials, so every SPARQL caller would reach
Spark Connect as Ontop, and the answer to "who read the salaries" would be "the
endpoint".

larsw/ontop@version5-auth-context fixes that in five opt-in commits -- the
caller's QueryContext reaches connection acquisition, a
ContextPropagatingJDBCConnectionPool builds each request's JDBC URL from it,
ontop.queryIdHttpHeader makes Ontop's query id the caller's correlation ID, and
Spark's own Connect JDBC driver is registered as a SparkSQL dialect and then
accommodated in three places where it is stricter than Hive's.

Here that becomes a compose service with an R2RML mapping over the same two
Iceberg tables. bob's SPARQL query for the restricted namespace is refused by
Polaris, naming bob, against a mapping that offers him exactly what it offers
alice. One correlation ID still covers the HTTP caller, Ontop's query log, Spark
Connect and Polaris.

The endpoint holds no credential for the data at all. Its table definitions are
pinned in db-metadata.json, so it never introspects and never has to be anybody;
make ontop-metadata regenerates that live, as alice. Which is not only tidier:
Polaris cannot express "read the schema but not the data", because Spark asks
for vended credentials on every loadTable.

Also fixes a blind spot in our own plugin. AnalyzePlan is answered inline on the
gRPC thread with no job tag, so the identity had nowhere to live; the three
existing clients never showed it because they only ran statements, while a JDBC
driver asks for a schema on every metadata call. PropagatedIdentityHolder now
binds the identity to the handler thread for the duration of the call, with the
job tag still winning wherever there is one.

Nine upstream behaviours are written up as FINDINGS.md §16.